--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -83,11 +83,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Network.cpp" />
     <QtRcc Include="client.qrc" />
     <QtUic Include="client.ui" />
     <QtMoc Include="client.h" />
     <ClCompile Include="client.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="Network.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
